# brainfuck

./: .gitmodules  CMakeLists.txt  README.md  visualize.py
examples/: 99bottles.bf  helloworld.bf
src/: CMakeLists.txt
src/bytecode/: CMakeLists.txt  brainbyte.cpp  libbytecode.cpp  libbytecode.hpp
src/dynasm/: CMakeLists.txt  braindyn.cpp  braindyn.cpp.dyn
src/interpreter/: CMakeLists.txt  brainint.cpp
src/llvm/: CMakeLists.txt  brainllvm.cpp
